        virtual images that existed in previous versions of MaRC has
        been removed for all map data types.  Due to the automatic
        scaling that now occurs, the results will be the same for
        SHORT map types, but not the other types.  As described above,
        a better scaling factor and offset will be chosen.

- Improved accuracy of vector magnitude calculations by leveraging an
  implementation that avoids floating point underflow and overflow, as
  well as having extremely low floating point error.

- Improved accuracy of quadratic equation root calculations by using
  an implementation that avoids loss of significant digits
  (i.e. catastrophic cancellation).  This impacts the sky removal
  feature and the Orthographic map projection.

- LONG map types are now correctly written to the map FITS file on 64
  bit platforms where the fundamental C language 'long' integer type
  is 8 bytes wide.

- Improved memory management.
  - Better C++ exception safety.
  - Reduced run-time memory requirements.
  - Slighty improved performance due to less deep copies of large
    arrays.

- Fixed inversion of source photo images from left to right and top to
  bottom.

- Support for maps containing 64 bit signed integer data has been
  added.  Set DATA_TYPE in your MaRC input file to LONGLONG to use
  this feature.

- Initial support for Doxygen based MaRC source code documentation
  generation is now available.  Assuming Doxygen is installed, run
  `make doxygen-doc' from the top-level MaRC source directory to
  generate MaRC library and program source code documentation.
  Generated documentation will reside in the doc/doxygen directory.

24 July 2017 - MaRC 0.9.8

- MaRC now requires C++14 conforming compilers.  The 'configure'
  script will attempt to detect and enable C++14 support in the C++
  compiler in use. Verified to build with g++ 6.3 and Clang++ 3.9.
- Modernized the build infrastructure to leverage the latest versions