@@ -21,6 +21,7 @@
  */
 
 #include "PhotoImageFactory.h"
+#include "FITS_memory.h"
 
 #include "MaRC/PhotoImage.h"
 #include "MaRC/GLLGeometricCorrection.h"
@@ -75,8 +76,8 @@ MaRC::PhotoImageFactory::PhotoImageFactory(
 std::unique_ptr<MaRC::SourceImage>
 MaRC::PhotoImageFactory::make(scale_offset_functor /* calc_so */)
 {
-    fitsfile * fptr = 0;
-    static const int mode = READONLY;
+    fitsfile * fptr = nullptr;
+    static constexpr int mode = READONLY;
     int status = 0;  // CFITSIO requires initialization of status
                      // variable.
 
@@ -96,16 +97,34 @@ MaRC::PhotoImageFactory::make(scale_offset_functor /* calc_so */)
         throw std::invalid_argument(s.str());
     }
 
+    FITS::file_unique_ptr safe_fptr(fptr);
+
     int naxis = 0;
-    static constexpr unsigned int MAXDIM = 2;
-    long naxes[MAXDIM] = { 0 };
     int bitpix = 0;
+    static constexpr int MAXDIM = 2;  // CFITSIO wants int.
+    long naxes[MAXDIM] = { 0 };
+
     (void) fits_get_img_param(fptr,
                               MAXDIM,
                               &bitpix,
                               &naxis,
                               naxes,
                               &status);
+
+    // Get the image data unit name (FITS standard BUNIT).
+    char bunit[FLEN_VALUE];
+    char bunit_comment[FLEN_COMMENT];
+
+    fits_read_key_str(fptr, "BUNIT", bunit, bunit_comment, &status);
+    if (status == 0) {
+        /**
+         * @todo Do something useful with BUNIT.
+         */
+    } else if (status != KEY_NO_EXIST) {
+        throw std::logic_error("Problem reading FITS BUNIT value.");
+    } else {
+        status = 0;
+    }
 
     LONGLONG const nelements =
         static_cast<LONGLONG>(naxes[0]) * naxes[1];
@@ -130,90 +149,15 @@ MaRC::PhotoImageFactory::make(scale_offset_functor /* calc_so */)
 
     fits_report_error(stderr, status);
 
-    (void) fits_close_file(fptr, &status);
+    safe_fptr.reset();  // Done reading the FITS file.
 
     // Perform flat fielding if a flat field file was provided.
-    std::vector<double> f_img;
-    if (!this->flat_field_.empty()) {
-        fitsfile * f_fptr = 0;
-        (void) fits_open_image(&f_fptr,
-                               this->flat_field_.c_str(),
-                               mode,
-                               &status);
-
-        if (status != 0) {
-            // Report any errors before creating the map since map
-            // creation can be time consuming.
-            fits_report_error(stderr, status);
-
-            std::ostringstream s;
-            s << "Unable to open flat field image \""
-              << this->filename_ << "\"";
-
-            throw std::invalid_argument(s.str());
-        }
-
-        int f_naxis = 0;
-        long f_naxes[MAXDIM] = { 0 };
-        int f_bitpix = 0;
-        (void) fits_get_img_param(f_fptr,
-                                  MAXDIM,
-                                  &f_bitpix,
-                                  &f_naxis,
-                                  f_naxes,
-                                  &status);
-
-        // Verify flat field image is same size as source photo
-        // image.
-        if (f_naxes[0] != naxes[0] && f_naxes[1] != naxes[1]) {
-            (void) fits_close_file(fptr, &status);
-
-            std::ostringstream s;
-            s << "Mismatched source (" << naxes[0] << "x" << naxes[1] << ")"
-              << " and flat field image "
-              << "(" << f_naxes[0] << "x" << f_naxes[1] << ")"
-              << "dimensions";
-
-            throw std::runtime_error(s.str());
-        }
-
-        // Note that we're only reading a 2-dimensional image
-        // above.
-        f_img.resize(nelements);
-
-        double nulval = std::numeric_limits<double>::quiet_NaN();
-        int anynul;  // Unused
-
-        (void) fits_read_pix(fptr,
-                             TDOUBLE, // Array of type "double".
-                             fpixel,
-                             nelements,
-                             &nulval,
-                             f_img.data(),
-                             &anynul,
-                             &status);
-
-        fits_report_error(stderr, status);
-
-        (void) fits_close_file(fptr, &status);
-    }
-
-    if (status != 0) {
-        char fits_error[31] = { 0 };  // 30 char max
-        fits_get_errstatus (status, fits_error);
-
-        throw std::runtime_error(fits_error);
-    }
-
-    // Perform flat fielding if desired.
-    if (!f_img.empty()) {
-        std::size_t const size = img.size();
-        assert(size == f_img.size());
-        for (std::size_t i = 0; i < size; ++i)
-            img[i] -= f_img[i];
-
-        f_img.clear();         // No longer need the flat field image.
-        f_img.shrink_to_fit();
+    int const result = flat_field_correct(naxes, img);
+    
+    if (result != 0) {
+        // Report any errors before creating the map since map
+        // creation can be time consuming.
+        return std::unique_ptr<SourceImage>();
     }
 
     // Invert image if desired.
@@ -462,4 +406,101 @@ MaRC::PhotoImageFactory::invert_v(std::vector<double> & image,
         // Swap the lines.
         std::swap_ranges(top_begin, top_end, bottom_begin);
     }
+}
+
+int
+MaRC::PhotoImageFactory::flat_field_correct(
+    long const naxes[2],
+    std::vector<double> & img) const
+{
+    std::vector<double> f_img;
+
+    int status = 0;
+
+    if (!this->flat_field_.empty()) {
+        fitsfile * fptr = nullptr;
+        static constexpr int mode = READONLY;
+
+        if (fits_open_image(&fptr,
+                            this->flat_field_.c_str(),
+                            mode,
+                            &status) != 0) {
+            fits_report_error(stderr, status);
+
+            std::ostringstream s;
+            s << "Unable to open flat field image \""
+              << this->filename_ << "\"";
+
+            throw std::invalid_argument(s.str());
+        }
+
+        FITS::file_unique_ptr const safe_fptr(fptr);
+
+        int f_bitpix = 0;
+        int f_naxis = 0;
+        static constexpr int MAXDIM = 2;  // CFITSIO wants int.
+        long f_naxes[MAXDIM] = { 0 };
+
+        if (fits_get_img_param(fptr,
+                               MAXDIM,
+                               &f_bitpix,
+                               &f_naxis,
+                               f_naxes,
+                               &status) != 0) {
+            fits_report_error(stderr, status);
+
+            return status;
+        }
+
+        // Verify flat field image is same size as source photo
+        // image.
+        if (f_naxes[0] != naxes[0] && f_naxes[1] != naxes[1]) {
+            std::ostringstream s;
+            s << "Mismatched source (" << naxes[0] << "x" << naxes[1] << ")"
+              << " and flat field image "
+              << "(" << f_naxes[0] << "x" << f_naxes[1] << ")"
+              << "dimensions";
+
+            throw std::runtime_error(s.str());
+        }
+
+        // Note that we're only reading a 2-dimensional image
+        // above.
+        LONGLONG const nelements =
+            static_cast<LONGLONG>(f_naxes[0]) * f_naxes[1];
+        f_img.resize(nelements);
+
+        long fpixel[MAXDIM] = { 1, 1 };
+        double nulval = std::numeric_limits<double>::quiet_NaN();
+        int anynul;  // Unused
+
+        (void) fits_read_pix(fptr,
+                             TDOUBLE, // Array of type "double".
+                             fpixel,
+                             nelements,
+                             &nulval,
+                             f_img.data(),
+                             &anynul,
+                             &status);
+
+        fits_report_error(stderr, status);
+    }
+
+    if (status != 0) {
+        char fits_error[FLEN_STATUS] = { 0 };
+        fits_get_errstatus (status, fits_error);
+
+        throw std::runtime_error(fits_error);
+    }
+
+    // Perform flat fielding if desired.
+    if (!f_img.empty()) {
+        std::size_t const size = img.size();
+        assert(size == f_img.size());
+
+        for (std::size_t i = 0; i < size; ++i)
+            img[i] -= f_img[i];
+    }
+
+    return 0;
 }
